--- a/02nio/nio02/pom.xml
+++ b/02nio/nio02/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>httpasyncclient</artifactId>
             <version>4.1.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.8.1</version>
+        </dependency>
     
         <!--
         <dependency>
